--- a/TextureExtractor/TextureExtractor.csproj
+++ b/TextureExtractor/TextureExtractor.csproj
@@ -5,7 +5,12 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
     <LangVersion>10.0</LangVersion>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Using Remove="System.Net.Http" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AssetsTools.NET" Version="2.0.12">
