--- a/TextureExtractor/TextureExtractor.csproj
+++ b/TextureExtractor/TextureExtractor.csproj
@@ -4,7 +4,7 @@
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
-    <LangVersion>10.0</LangVersion>
+    <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
