--- a/QuestOverlayPlugin/QuestOverlayPlugin.csproj
+++ b/QuestOverlayPlugin/QuestOverlayPlugin.csproj
@@ -37,6 +37,7 @@
 
   <ItemGroup>
     <None Remove="QuestOverlayPlugin.csproj.DotSettings" />
+    <None Remove="Resources\Event_Track_-_XP.png" />
   </ItemGroup>
 
   <ItemGroup>
@@ -111,6 +112,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Event_Track_-_XP.png" />
     <Resource Include="Resources\Frame.png" />
     <Resource Include="Resources\FSG_Icon_FX.png" />
     <Resource Include="Resources\QuestIcon.png" />
