--- a/TextureExtractor/TextureExtractor.csproj
+++ b/TextureExtractor/TextureExtractor.csproj
@@ -13,15 +13,21 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AssetsTools.NET" Version="2.0.12">
-      <PrivateAssets>all</PrivateAssets>
+    <PackageReference Include="AssetsTools.NET" Version="3.0.0-preview3">
     </PackageReference>
+    <PackageReference Include="AssetsTools.NET.Texture" Version="1.0.0-preview2" />
     <PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.18.2">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="PortableSettingsProvider" Version="0.2.4">
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ILStripper\ILStripper.csproj">
+      <Private>False</Private>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
