add more workflow triggers

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,9 @@ on:
       - "**.csproj"
       - "**.sln"
       - "**.pubxml"
+      - "**.yml"
+      - "**.targets"
+      - "**.props"
       - "**/Resources/**.*"
   workflow_dispatch:
     inputs:
