--- a/HearthMirrorGenerator/HearthMirrorGenerator.csproj
+++ b/HearthMirrorGenerator/HearthMirrorGenerator.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ICSharpCode.Decompiler" Version="7.2.1.6856" GeneratePathProperty="true" PrivateAssets="all" />
+    <PackageReference Include="ICSharpCode.Decompiler" Version="8.0.0.7313-preview4" GeneratePathProperty="true" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="[3.11.0,4.0.0-1)" PrivateAssets="all" />
   </ItemGroup>
 
