--- a/TextureExtractor/TextureExtractor.csproj
+++ b/TextureExtractor/TextureExtractor.csproj
@@ -6,6 +6,7 @@
     <TargetFramework>net472</TargetFramework>
     <LangVersion>latest</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
