--- a/ExtractAllTexturesFromHS/ExtractAllTexturesFromHS.csproj
+++ b/ExtractAllTexturesFromHS/ExtractAllTexturesFromHS.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ThisAssembly.Project" Version="1.2.14">
+    <PackageReference Include="ThisAssembly.Project" Version="1.3.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -29,5 +29,9 @@
   <ItemGroup>
     <ProjectReference Include="..\TextureExtractor\TextureExtractor.csproj" />
   </ItemGroup>
+
+  <Target Name="CleanOutput" AfterTargets="Clean">
+    <RemoveDir Directories="obj\hs" />
+  </Target>
 
 </Project>
