--- a/HSReflection/HSReflection.csproj
+++ b/HSReflection/HSReflection.csproj
@@ -36,6 +36,11 @@
       <Private>False</Private>
       <SpecificVersion>False</SpecificVersion>
     </Reference>
+    <Reference Include="untapped-scry-dotnet">
+      <HintPath>$(HSDTPath)\untapped-scry-dotnet.dll</HintPath>
+      <Private>False</Private>
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="HearthstoneDeckTracker">
       <HintPath>$(HSDTPath)\HearthstoneDeckTracker.exe</HintPath>
       <Private>False</Private>
@@ -44,6 +49,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="fasterflect.reflect" Version="3.1.0" />
     <PackageReference Include="IsExternalInit" Version="1.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
