--- a/ExtractAllTexturesFromHS/ExtractAllTexturesFromHS.csproj
+++ b/ExtractAllTexturesFromHS/ExtractAllTexturesFromHS.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ThisAssembly.Project" Version="1.4.1">
+    <PackageReference Include="ThisAssembly.Project" Version="[1.4.3,2.0.0)">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
