--- a/HearthMirrorGenerator/HearthMirrorGenerator.csproj
+++ b/HearthMirrorGenerator/HearthMirrorGenerator.csproj
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ICSharpCode.Decompiler" Version="8.1.1.7464" GeneratePathProperty="true" PrivateAssets="all" />
+    <PackageReference Include="ICSharpCode.Decompiler" Version="9.1.0.7988" GeneratePathProperty="true" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="[3.11.0,4.0.0-1)" PrivateAssets="all" />
   </ItemGroup>
 
   <PropertyGroup>
     <GetTargetPathDependsOn>$(GetTargetPathDependsOn);GetDependencyTargetPaths</GetTargetPathDependsOn>
+    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <Target Name="GetDependencyTargetPaths">
