--- a/ExtractAllTexturesFromHS/ExtractAllTexturesFromHS.csproj
+++ b/ExtractAllTexturesFromHS/ExtractAllTexturesFromHS.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net472</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>13.0</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
