--- a/TextureExtractor/TextureExtractor.csproj
+++ b/TextureExtractor/TextureExtractor.csproj
@@ -3,8 +3,9 @@
   <Import Project="..\Version.props" />
 
   <PropertyGroup>
+    <Company>ardittristan</Company>
     <TargetFramework>net472</TargetFramework>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>13.0</LangVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
